<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_movie"
        android:title="@string/menu_movies"
        android:icon="@drawable/ic_baseline_local_movies_24"/>

    <item
        android:id="@+id/nav_tv"
        android:title="@string/menu_tv_show"
        android:icon="@drawable/ic_baseline_tv_24"/>

    <item
        android:id="@+id/nav_fav"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_baseline_favorite_24" />
</menu>